--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "react-toastify": "^7.0.3"
+    "react-toastify": "^7.0.3",
+    "styled-components": "^5.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.13.15",
